--- a/CGcw/CGcw.vcxproj.filters
+++ b/CGcw/CGcw.vcxproj.filters
@@ -62,6 +62,9 @@
     <ClInclude Include="Anim.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="Camera.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <Text Include="pixelShader.txt">
