--- a/CGcw/CGcw.vcxproj.filters
+++ b/CGcw/CGcw.vcxproj.filters
@@ -100,6 +100,9 @@
     <Text Include="normalPixelShader.txt">
       <Filter>Source Files</Filter>
     </Text>
+    <Text Include="deferPixelShader.txt">
+      <Filter>Source Files</Filter>
+    </Text>
   </ItemGroup>
   <ItemGroup>
     <None Include="Resource\TRex.gem">
